--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,10 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
+    id 'kotlin-parcelize'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -38,15 +42,52 @@ android {
 
 dependencies {
 
+    //ui
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation "androidx.activity:activity-ktx:1.4.0"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.13.1'
+    
+    //firebase
     implementation platform('com.google.firebase:firebase-bom:30.0.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
     implementation 'com.google.firebase:firebase-database:20.0.5'
+
+    //testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+
+    //hilt
+    implementation 'com.google.dagger:hilt-android:2.41'
+    kapt 'com.google.dagger:hilt-compiler:2.41'
+    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.41'
+    kaptTest 'com.google.dagger:hilt-compiler:2.41'
+
+    //datastore
+    implementation("androidx.datastore:datastore-core:1.0.0")
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    //Camera
+    implementation "androidx.camera:camera-camera2:1.1.0-rc01"
+    implementation "androidx.camera:camera-lifecycle:1.1.0-rc01"
+    implementation "androidx.camera:camera-view:1.1.0-rc01"
+
+    //lifecycle
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
+
+
 }
