--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GetfixApplication">
         <activity
+            android:name=".ui.home.HomeeActivity"
+            android:exported="false"
+            android:label="@string/title_activity_homee" />
+        <activity
             android:name=".ui.auth.login.LoginActivity"
             android:exported="false" />
         <activity
