--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,16 @@
     package="com.example.getfixapplication">
 
     <application
-        android:allowBackup="true"
         android:name=".base.GetFixBase"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GetfixApplication">
+        <activity
+            android:name=".ui.Order.DetailOrderActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.booking.BookingActivity"
             android:exported="false" />
