mengganti login dan signup ke firestore karena terhubung gcp

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,6 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures {
-        viewBinding true
-    }
 }
 
 dependencies {
@@ -66,6 +63,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.4.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.1.2'
 
     //testing
     testImplementation 'junit:junit:4.13.2'
