--- a/cloud/package.json
+++ b/cloud/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "apigetfix",
+  "name": "cobaapi",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sakepoi/apigetfix.git"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sakepoi/apigetfix/issues"
-  },
-  "homepage": "https://github.com/sakepoi/apigetfix#readme",
-  "dependencies": {
-    "@hapi/hapi": "^20.2.2",
-    "nanoid": "^3.3.4"
-  },
   "devDependencies": {
     "nodemon": "^2.0.16"
+  },
+  "dependencies": {
+    "@google-cloud/firestore": "^5.0.2",
+    "express": "^4.18.1",
+    "nanoid": "^3.3.4"
   }
 }
