menambah tools:listitem="@layout/itemnya" agar terlihat itemnya di xml dan memperbaiki tab layout

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,5 +98,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
 
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+
 
 }
