Menambakan penyeleksian username di signup, mengubah nama homee, menambahkan constant value

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,9 +63,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
     implementation 'com.google.firebase:firebase-database:20.0.5'
-    implementation 'androidx.navigation:navigation-fragment:2.4.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.1.2'
 
     //testing
@@ -98,5 +95,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
 
+    //recycleview selector
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+
+    //ratingbar
+    implementation 'me.zhanghai.android.materialratingbar:library:1.4.0'
 
 }
