--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".base.GetFixBase"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GetfixApplication">
@@ -18,7 +17,7 @@
             android:name=".ui.booking.BookingActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.home.HomeeActivity"
+            android:name=".ui.home.NavigationHomeActivity"
             android:exported="false"
             android:label="@string/title_activity_homee" />
         <activity
@@ -26,9 +25,6 @@
             android:exported="false" />
         <activity
             android:name=".ui.auth.register.SignupActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.home.HomeActivity"
             android:exported="false" />
         <activity
             android:name=".ui.splash.MainActivity"
