--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
             android:name=".ui.booking.PilihTeknisiActivity"
             android:exported="false" />
         <activity
+            android:name=".ui.order.DetailOrderActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.camera.CameraActivity"
             android:exported="false" />
         <activity
