--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,4 +107,7 @@ dependencies {
     //ratingbar
     implementation 'me.zhanghai.android.materialratingbar:library:1.4.0'
 
+    //carousel
+    implementation 'com.synnapps:carouselview:0.1.5'
+
 }
