--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+
 }
 
 android {
@@ -20,6 +21,8 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
+
 
     buildTypes {
         release {
@@ -107,5 +110,8 @@ dependencies {
     //ratingbar
     implementation 'me.zhanghai.android.materialratingbar:library:1.4.0'
 
+    //carousel
+    implementation 'com.synnapps:carouselview:0.1.4'
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
 
 }
