--- a/cloud/package.json
+++ b/cloud/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
   "dependencies": {
     "@google-cloud/firestore": "^5.0.2",
     "express": "^4.18.1",
+    "firebase-admin": "^10.2.0",
     "nanoid": "^3.3.4"
   }
 }
